# sovereign-executor

./: .gitignore  Cargo.toml  README.md  README_JP.md  auditor.py  build.rs  oracle.py  panic.py  requirements.txt  sovereign.proto  sovereign_pb2.py  trade_log.csv
archive/: dust_sweeper.py  migrate_logs.py  oracle_solana.py
executor/: Cargo.toml  README.md  build.rs  sovereign_pb2_grpc.py
executor/src/: main.rs
programs/flash_loan/: Cargo.toml
programs/flash_loan/src/: lib.rs
proto/: sovereign.proto
roadmap/: roadmap.md
scripts/: auditor.py  check_balance.py  check_usdc.py  create_wallet.py  final_unlock.py  list_models.py  rescue_key.py  unlock.py  verify_deployment.py
src/: main.rs
tests/: test_compliance.py  test_gemini.py  test_gemini_v2.py  test_history.py  test_kill_switch.py  test_swap.py
