[package]
name = "sovereign_executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sovereign_executor"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"
anyhow = "1.0"
magic-crypt = "3.1"
dotenv = "0.15"
bs58 = "0.4"

chrono = "0.4.43"
spl-token = "4.0"
solana-account-decoder = "1.18"

[build-dependencies]
tonic-build = "0.12"
